@@ -1,4 +1,5 @@
 - fix typo breaking reading fstab with UUID= entries
+- don't set $o->{security} until accepted (#33567)
 
 Version 10.4.195 - 14 September 2007, by Olivier "blino" Blin
 
